# chunking_techniques

./: chunking.ipynb  pyproject.toml  readme.MD  requirements.txt
data/chunks/: chunks_consecutive.json  chunks_cumulative.json  chunks_greg_custom.json  chunks_regex.json
data/raw/: Constitution_eng.rtf
