[project]
name = "chunking"
version = "0.1.0"
description = ""
authors = [
    {name = "Fedor",email = "fivashchenko@yandex.ru"}
]
readme = "README.md"
requires-python = ">=3.11, <3.13"
dependencies = [
    "ipykernel (>=6.29.5,<7.0.0)",
    "rich (>=14.0.0,<15.0.0)",
    "striprtf (>=0.0.29,<0.0.30)",
    "torch (==2.2.2)",
    "sentence-transformers (>=4.1.0,<5.0.0)",
    "scikit-learn (>=1.7.0,<2.0.0)",
    "semantic-chunkers (>=0.0.10,<0.0.11)",
    "matplotlib (>=3.10.3,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
